<resources>
    <string name="app_name">NewsApp-MVVM-Architecture</string>
    <string name="top">Top Headlines</string>
    <string name="sources">News Sources</string>
    <string name="countries">Countries</string>
    <string name="lang">Languages</string>
    <string name="search">Search News</string>
    <string name="proceed">Proceed</string>
    <string name="loading">Loading</string>

</resources>