<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <Button
        android:id="@+id/topHeadlines"
        android:layout_width="275dp"
        android:layout_height="100dp"
        android:text="@string/top"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@id/newsSrc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </Button>

    <Button
        android:id="@+id/newsSrc"
        android:layout_width="275dp"
        android:layout_height="100dp"
        android:layout_marginTop="100dp"
        android:text="@string/sources"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@id/countries"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/topHeadlines">
    </Button>

    <Button
        android:id="@+id/countries"
        android:layout_width="275dp"
        android:layout_height="100dp"
        android:text="@string/countries"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/lang"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newsSrc">
    </Button>

    <Button
        android:id="@+id/lang"
        android:layout_width="275dp"
        android:layout_height="100dp"
        android:text="@string/lang"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/countries"
        app:layout_constraintBottom_toTopOf="@id/search">
    </Button>

    <Button
        android:id="@+id/search"
        android:layout_width="275dp"
        android:layout_height="100dp"
        android:text="@string/search"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lang">
    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>